--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+div.board {
+    display: inline-table;
+}
+div.row {
+    display: inline-row;
+}
+
+div.cell {
+   border: 1px outset blue;
+   background-color: lightBlue;
+   height:40px;
+   width:40px;
+   cursor:pointer;
+   display: table-cell;
+   text-align: center;
+   vertical-align: middle;
+}
+
+div.cell:hover {
+   background-color: blue;
+   color:white;
+}
